--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Friends Ferrets</title>
+	<title>Svyatets Oleksandr Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	
 
 	<link rel="stylesheet" type="text/css" href="custom.css">
 </head>
@@ -21,7 +20,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Friend Ferrets</a>
+      <a class="navbar-brand" href="#">SashaSV</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -30,12 +29,12 @@
 				<li class="active"><a href="">Home</a></li>
 				<li><a href="">About</a></li>
 				<li><a href="">Contact</a></li>
-        
+
       </ul>
-      
+
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Sign Up <i class="fa fa-user-plus"></i></a></li>
-        <li><a href="#">Login <i class="fa fa-user"></i></a></li>        
+        <li><a href="#">Login <i class="fa fa-user"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
