--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="">Home</a></li>
-				<li><a href="">About</a></li>
+				<li class="active"><a href="">About</a></li>
+				<li><a href="">Portfolio</a></li>
 				<li><a href="">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
