--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -34,7 +34,19 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container">
+<div class="container section">
+	<div class="row">
+		<div class="col-lg-12">
+			<div id="content">
+				<h1>Friends Ferrets</h1>
+				<h3>Ferret's Social Network</h3>
+				<hr>
+				<button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started</button>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="container section">
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
