Added skeletone for 2 sections (Portfolio, Contact)

--- a/index.html
+++ b/index.html
@@ -38,8 +38,20 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h1>Friends Ferrets</h1>
-				<h3>Ferret's Social Network</h3>
+				<h2>About</h2>
+				<hr>
+				<p>Front-End Developer and UX/UI designer, with practical experience in
+					project management, branding strategy, and creative direction; devoted
+					 to functional programming and information architecture.</p>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="container section">
+	<div class="row">
+		<div class="col-lg-12">
+			<div id="content">
+				<h2>Portfolio</h2>
 				<hr>
 				<button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started</button>
 			</div>
@@ -50,8 +62,7 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h1>Friends Ferrets</h1>
-				<h3>Ferret's Social Network</h3>
+				<h2>Contact</h2>
 				<hr>
 				<button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started</button>
 			</div>
