--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
 	</div>
 </div>
 
+<!-- Footer-->
+<footer>
+  <div>Oleksandr Svyatets <i class="fa fa-copyright" aria-hidden="true"></i>
+    <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
+  </div>
+</footer>
+
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
