--- a/index.html
+++ b/index.html
@@ -62,9 +62,18 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<div id="content">
-				<h2>Contact</h2>
+				<h2>Contacts</h2>
 				<hr>
-				<button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started</button>
+					<div>
+						<ul id="contactsList">
+							<!-- later	<li><a class="button social" href="https://www.linkedin.com/in/hallaathrad"><i class="fa fa-fw fa-linkedin"></i></a></li> -->
+							<li><a class="button social" href="mailto:sasha.svyatets@gmail.com"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+							<li><a class="button social" href="https://github.com/ChessFerret"><i class="fa fa-fw fa-github"></i></a></li>
+							<li><a class="button social" href="https://vk.com/id36855164"><i class="fa fa-fw fa-vk" aria-hidden="true"></i></a></li>
+							<li><a class="button social" href="https://www.facebook.com/sasha.svyatets" title="My Flickr"><i class="fa fa-fw fa-facebook"></i></a></li>
+						</ul>
+					</div>
+
 			</div>
 		</div>
 	</div>
