Footer styles update

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!-- Footer-->
 <footer>
   <div>Oleksandr Svyatets <i class="fa fa-copyright" aria-hidden="true"></i>
-    <script>document.write(new Date().getFullYear())</script>. All Rights Reversed
+    <script>document.write(new Date().getFullYear())</script>
   </div>
 </footer>
 
