--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="container section">
 	<div class="row">
 		<div class="col-lg-12">
-			<div id="content">
+			<div>
 				<h2>About</h2>
 				<hr>
 				<p>Front-End Developer and UX/UI designer, with practical experience in
@@ -50,7 +50,7 @@
 <div class="container section">
 	<div class="row">
 		<div class="col-lg-12">
-			<div id="content">
+			<div>
 				<h2>Portfolio</h2>
 				<hr>
 				<button class="btn btn-default btn-lg"><i class="fa fa-paw"></i> Get Started</button>
@@ -58,10 +58,10 @@
 		</div>
 	</div>
 </div>
-<div class="container section">
+<div class="container section" id="preFooter">
 	<div class="row">
 		<div class="col-lg-12">
-			<div id="content">
+			<div>
 				<h2>Contacts</h2>
 				<hr>
 					<div>
