--- a/index.html
+++ b/index.html
@@ -26,27 +26,28 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-				<li class="active"><a href="">About</a></li>
-				<li><a href="">Portfolio</a></li>
-				<li><a href="">Contact</a></li>
+				<li class="active"><a href="#about">About</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
-<div class="container section">
+<a class="anchor" id="about"></a>
+<div class="container section" >
 	<div class="row">
 		<div class="col-lg-12">
 			<div>
 				<h2>About</h2>
 				<hr>
-				<p>Front-End Developer and UX/UI designer, with practical experience in
+				<p>Full Stack Developer and UX/UI designer, with practical experience in
 					project management, branding strategy, and creative direction; devoted
 					 to functional programming and information architecture.</p>
 			</div>
 		</div>
 	</div>
 </div>
+<a class="anchor"  id="portfolio"></a>
 <div class="container section">
 	<div class="row">
 		<div class="col-lg-12">
@@ -58,7 +59,8 @@
 		</div>
 	</div>
 </div>
-<div class="container section" id="preFooter">
+<a class="anchor" id="contact"></a>
+<div class="container section">
 	<div class="row">
 		<div class="col-lg-12">
 			<div>
